<resources>
    <string name="app_name">ChallengeMe</string>
    <string name="email_hint">EMAIL</string>
    <string name="password_hint">PASSWORD</string>
    <string name="text_register">REGISTER</string>
    <string name="text_login">LOGIN</string>
    <string name="text_forgot_password">FORGOT PASSWORD</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="required_field">This field is required.</string>
    <string name="invalid_email_address">Invalid email address.</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="confirm_password_hint">CONFIRM PASSWORD</string>
    <string name="passwords_not_matching">Passwords not matching.</string>
    <string name="my_activities_tab">My Activities</string>
    <string name="record_activity">Record activity</string>
    <string name="activity_name">Name</string>
    <string name="activity_time">Time</string>
    <string name="title_activity_record">RecordActivity</string>
    <string name="account">ACCOUNT</string>
    <string name="logout">LOGOUT</string>
    <string name="save_user">SAVE USER</string>
    <string name="username_hint">USERNAME</string>
    <string name="firstname_hint">FIRSTNAME</string>
    <string name="lastname_hint">LASTNAME</string>
    <string name="bike_hint">BIKE</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="text_reset_password">RESET PASSWORD</string>
    <string name="stop_text">STOP</string>
    <string name="save_text">SAVE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="action_settings">Settings</string>

</resources>
