<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey_background">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:background="@color/grey_background"
                  android:fitsSystemWindows="true"
                  android:orientation="vertical"
                  tools:context="com.example.cristianmmuresan.challengeme.ui.home.fragments.AccountFragment">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailInputLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_input_layout_size"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/text_size_xlarge"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/firstnameInputLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_input_layout_size"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/firstname_hint"
                android:inputType="textPersonName"
                android:textSize="@dimen/text_size_xlarge"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lastnameInputLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_input_layout_size"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/lastname_hint"
                android:inputType="textPersonName"
                android:textSize="@dimen/text_size_xlarge"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/bikeInputLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_input_layout_size"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/bike_hint"
                android:inputType="textPersonName"
                android:textSize="@dimen/text_size_xlarge"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/btn_save_user"
            style="@style/TextAppearance.Buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@drawable/btn_register"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/save_user"/>

        <TextView
            android:id="@+id/btn_logout"
            style="@style/TextAppearance.Buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:background="@drawable/btn_register"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/logout"/>
    </LinearLayout>
</ScrollView>