<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"
                android:fitsSystemWindows="true"
                tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/activity_title_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_login"
        android:textSize="@dimen/text_size_xxxlarge"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_centerHorizontal="true"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailInputLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_input_layout_size"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/login_margin_top">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/text_size_xlarge"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_input_layout_size"
        android:layout_below="@+id/emailInputLayout"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:gravity="center"
            android:inputType="textPassword"
            android:textSize="@dimen/text_size_xlarge"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/btn_height"
        style="@style/TextAppearance.Buttons"
        android:background="@drawable/btn_register"
        android:layout_below="@id/passwordInputLayout"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_alignParentLeft="true"
        android:gravity="center"
        android:text="@string/text_register"
        android:layout_toLeftOf="@+id/activity_title_login"
        android:layout_toStartOf="@+id/activity_title_login"/>

    <TextView
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/btn_height"
        style="@style/TextAppearance.Buttons"
        android:background="@drawable/btn_register"
        android:layout_below="@id/passwordInputLayout"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:text="@string/text_login"
        android:layout_toRightOf="@+id/activity_title_login"
        android:layout_toEndOf="@+id/activity_title_login"/>

    <TextView
        android:id="@+id/btn_forgot_password"
        style="@style/TextAppearance.Buttons"
        android:background="@drawable/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/text_forgot_password" />

</RelativeLayout>
